2008-08-13  Matthias Clasen  <mclasen@redhat.com>

	Bug 547673 – Accessors for GtkFileSelection.font_entry and
	font_style_entry

	* gtk/gtk.symbols:
	* gtk/gtkfontsel.[hc]: Don't add getters for widgets that are not
	actually part of the font selection dialog in standard builds.
	Pointed out by Torsten Schoenfeld

2008-08-13  Matthias Clasen  <mclasen@redhat.com>

	Bug 547516 – Add comments for translators in gtkprintbackendcups.c

	* modules/printbackends/cups/gtkprintbackendcups.c: Add translator
	hints. Patch by Leonardo Ferreira Fontenelle

2008-08-13  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkmarshalers.list: get rid of the deprecated aliases NONE
	and BOOL.

	* gtk/gtkdialog.c
	* gtk/gtkentrycompletion.c
	* gtk/gtkmenuitem.c
	* gtk/gtkoldeditable.c
	* gtk/gtkrange.c
	* gtk/gtktreeview.c
	* gtk/gtkwidget.c: changed accordingly.

2008-08-13 Erwann Chenede - <erwann.chenede@sun.com>

	Bug 547456 - gdk/x11/gdkscreen-x11.c : init_solaris_xinerama 
	doesn't compile on Solaris

	* gdk/x11/gdkscreen-x11.c: make init_solaris_xinerama () compile 
	when HAVE_SOLARIS_XINERAMA is defined.

2008-08-13  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkstock.c (gtk_stock_lookup): cast the return value of
	g_dgettext() to fix warning about discarded qualifier.

2008-08-12  Paolo Borelli  <pborelli@katamail.com>

	* gtk/gtkclipboard.c (gtk_clipboard_store):
	use canonical signal name.

2008-08-12  Paolo Borelli  <pborelli@katamail.com>

	Bug 526234 - make shift+ctrl+del delete till the end of line

	* gtk/gtktextview.c: add shift+ctrl+del and shift+ctrl+backspace
	keyboard shortcuts to delete to the end/start of the current line.

2008-08-12  Michael Natterer  <mitch@imendio.com>

	* gtk/gtklinkbutton.c (set_link_color): bail out if there is no
	label to set the color on.

	(gtk_link_button_add): call set_link_color() so the label gets
	the right color no matter how the link button is created.

2008-08-12  Michael Natterer  <mitch@imendio.com>
