@@ -1,3 +1,10 @@
+2008-08-15  Christian Dywan  <christian@imendio.com>
+
+        Bug 547775 – Documentation of gtk-button-images is not correct
+
+	* gtk/gtkbutton.c (gtk_button_class_init): Improve documentation
+        of "gtk-button-images" setting
+
 2008-08-13  Matthias Clasen  <mclasen@redhat.com>
 
 	Bug 547673 – Accessors for GtkFileSelection.font_entry and
